Fix vertical alignment

--- a/packages/cardhost/app/styles/components/button.css
+++ b/packages/cardhost/app/styles/components/button.css
@@ -151,7 +151,8 @@
 .ch-button--icon.responsive {
   --icon-url: url('/assets/images/buttons/responsive-inactive.svg');
   --width: auto;
-  --height: 60px;
+  --height: auto;
+  padding-top: 25px;
   background-size: 25px 25px;
   background-position: top;
   justify-content: center;
@@ -171,7 +172,8 @@
 .ch-button--icon.full-width {
   --icon-url: url('/assets/images/buttons/full-width-inactive.svg');
   --width: auto;
-  --height: 40px;
+  --height: auto;
+  padding-top: 25px;
   background-size: 20px 20px;
   background-position: top;
   display: inline-flex;
